# q-pride

./: .gitignore  .nojekyll  CNAME  Notes.html  Play-Sparks.html  Play.html  README.md  _quarto.yml  about.html  about.qmd  hello.html  index.html  index.qmd  listings.json  robots.txt  search.json  sitemap.xml  something.html
_drafts/: 2022-12-01-game-review-journey.md
_env/: pyproject.toml  q  rproject.toml
_site/: about.html  index.html  listings.json  search.json
_site/posts/: 2020-09-18-Game-Review-Empyrion-Galactic-Survival.html  2020-09-30-Game-Review-Post-Void.html  (+15 more)
_templates/: template.ipynb  template.md  template.qmd
posts/: 2020-07-09-Voices-of-the-Void.html  2020-09-06-exploring-altair-visualization.html  2020-09-09-fastbooks-incidentally-supports-r.html  2020-10-28-The-Pulp-Mindset-Review.html  2021-02-09-Memorandum-Of-Understanding-Blurb.html  2021-02-20-Luhns-Algorithm-Credit-Card.html  2021-05-18-Game-Review-The-Forest.html  2021-09-07-game-review-ethereal-estate.html  2022-02-02-How-To-Make-Matching-Textures-And-Normals.html  2022-09-08-reviewing-fastai-2022-coursework-thebeginning.html  2022-09-28-cycle-jobs-part-one.html  2022-10-07-cycle-jobs-part-two.html  2022-10-14-cycle-calculate-job-values.html  2022-10-26-how-to-quickly-use-other-formats-in-python.html  2022-11-01-game-review-powerwash-simulator.html  2022-11-02-simple-hightlight-over-exiting-plot.html  2022-11-04-cycle-jobs-part-four.html  2022-11-10-simple-idea-using-memcached.html  2022-11-16-does-faker-cc-pass-luhns-algo.html  2022-11-16-just-a-catpost.html
posts/qmds/: hello.html  (+23 more)
(+219 files in other folders)
